<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <fragment
        android:name="komiskey.jacob.myfitkit.LoggedInAsFragment"
        android:id="@+id/logged_in_as_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/session_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_cost"
        android:imeActionId="@+id/session_cost"
        android:imeActionLabel="@string/session_cost"
        android:imeOptions="actionUnspecified"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/tax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tax_text"
        android:imeActionId="@+id/tax"
        android:imeActionLabel="@string/tax_text"
        android:imeOptions="actionUnspecified"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_text"
        android:imeActionId="@+id/total"
        android:imeActionLabel="@string/total_text"
        android:imeOptions="actionUnspecified"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/credit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/ccnum_text"
        android:imeActionId="@+id/ccnum"
        android:imeActionLabel="@string/ccnum_text"
        android:imeOptions="actionUnspecified"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/expiration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiration_date_text"
        android:imeActionId="@+id/expiration_date"
        android:imeActionLabel="@string/expiration_date_text"
        android:imeOptions="actionUnspecified"
        android:inputType="date"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/ccv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ccv_text"
        android:imeActionId="@+id/ccv"
        android:imeActionLabel="@string/ccv_text"
        android:imeOptions="actionUnspecified"
        android:inputType="date"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/submit_payment_button"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/submit_payment_button"
        android:textStyle="bold"
        />


</LinearLayout>
