<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <fragment
        android:name="komiskey.jacob.myfitkit.LoggedInAsFragment"
        android:id="@+id/logged_in_as_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/customer_photo"
            android:layout_width="365dp"
            android:layout_height="187dp"
            android:scaleType="center"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            />
        <ImageButton
            android:id="@+id/customer_camera"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_camera"/>

    </LinearLayout>

    <EditText
    android:id="@+id/customer_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/customer_name"
    android:imeActionId="@+id/customer_name"
    android:imeActionLabel="@string/customer_name"
    android:imeOptions="actionUnspecified"
    android:inputType="text"
    android:maxLines="1"
    android:singleLine="true" />

    <EditText
        android:id="@+id/customer_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_text"
        android:imeActionId="@+id/customer_phone"
        android:imeActionLabel="@string/phone_text"
        android:imeOptions="actionUnspecified"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/customer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_text"
        android:imeActionId="@+id/customer_email"
        android:imeActionLabel="@string/email_text"
        android:imeOptions="actionUnspecified"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

</LinearLayout>